# Echo

./: .gitignore  agent.ipynb  agent.py  agent_test.ipynb  echo_tools.py  langgraph.json  main.py  planning.py  prompts.py  pyproject.toml  response.md  trial.py  web_scrap.ipynb
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
output/: ai_resume_analyzer_roadmap.md  answer.md  expense_tracker_roadmap.md  response.md  roadmap.md
